[package]
name = "tcp-comm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"]}
tokio-stream = "0.1.16"
tokio_schedule = "0.3.2"
time = "0.3.36"
clap = { version = "4.5.17", features = ["derive"] }